<resources>
    <string name="app_name">Snowflake</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="verify">Verify</string>
    <string name="phone_verification_disclaimer">If you use phone sign-in, you might receive an SMS message for verification and standard rates apply.</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_new_account">Don\'t have an account? Sign In</string>
    <string name="login_using">or Log in using</string>
    <string name="singin">Sign In</string>
    <string name="create_account">Create accout</string>
    <string name="username_warn">Enter a valid username</string>
    <string name="password_warn">Enter a valid password</string>
    <string name="re_enter_password_warn">Passwords don\'t match</string>
    <string name="email_warn">Enter a valid email</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="accept_terms">By signing up, you agree to our Terms of Use</string>
    <string name="info">Info</string>
    <string name="update_profile">Update profile</string>
    <string name="send_message">Send message</string>
    <string name="send_friendship_request">Send friendship request</string>
    <string name="cancel_friendship_request">Cancel friendship request</string>
    <string name="accept_friendship_request">Accept friendship request</string>
    <string name="decline_friendship_request">Decline friendship request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="sent_you_a_friend_request">Sent you a friend request</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
</resources>