<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/usersProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile_image"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/usernameFriendsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fullNameFriendsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/infoFriendsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/acceptRequestButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/accept"
                    android:layout_margin="2dp"
                    android:visibility="invisible"
                    android:drawableLeft="@drawable/ic_add_user"
                    />
                <Button
                    android:id="@+id/declineRequestButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/decline"
                    android:layout_margin="2dp"
                    android:visibility="invisible"
                    android:drawableLeft="@drawable/ic_decline"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>