<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfilePicture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        />

    <TextView
        android:id="@+id/userProfileFullNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/userProfilePicture"
        android:text="@string/full_name"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/userProfileInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/userProfileFullNameTextView"
        android:text="@string/info"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/sendFriendshipRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/userProfileInfoTextView"
        android:text="@string/send_friendship_request"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_add_user"/>

    <Button
        android:id="@+id/declineFriendshipRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/sendFriendshipRequestButton"
        android:text="@string/decline_friendship_request"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:drawableLeft="@drawable/ic_decline"/>

    <Button
        android:id="@+id/sendMessageRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:drawableLeft="@drawable/ic_message"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/declineFriendshipRequestButton"/>




</RelativeLayout>