<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateGroupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/createGroupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/app_bar_layout"
            android:id="@+id/createGroupToolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/createGroupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:layout_below="@id/createGroupLayout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/groupNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createGroupText"
        android:hint="@string/group_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsRecyclerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/groupNameEditText"
        android:layout_above="@id/createGroupButton"/>


    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/create"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/createGroupButton"/>



</RelativeLayout>