<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logoImg"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="2dp"
                android:fontFamily="@font/aclonica"
                android:text="Snowflake"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@id/logoTextView"
                android:fontFamily="sans-serif-medium"
                android:text="@string/singin"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:inputType="textEmailAddress"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signInText"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:drawableStart="@drawable/ic_email"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />

            <EditText
                android:id="@+id/reEnterPasswordEditText"
                android:inputType="textPassword"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText"
                android:hint="@string/re_enter_password"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:drawableStart="@drawable/ic_password"
                />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/reEnterPasswordEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:text="@string/create_account"/>

            <TextView
                android:id="@+id/termsTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/createAccountButton"
                android:text="@string/accept_terms"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/termsTextView"
                android:text="@string/already_have_an_account"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>