<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profileSettingsBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/app_bar_layout"
            android:id="@+id/profileSettingsToolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/profileSettingsBarLayout"/>


    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileImage"
        android:layout_centerHorizontal="true"
        android:text="username14242"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="40dp"/>


    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameTextView"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_username"
        android:drawableEnd="@drawable/ic_edit"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameEditText"
        android:hint="@string/full_name"
        android:drawableStart="@drawable/ic_username"
        android:drawableEnd="@drawable/ic_edit"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/infoEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fullNameEditText"
        android:hint="@string/info"
        android:inputType="textMultiLine"
        android:drawableStart="@drawable/ic_info"
        android:drawableEnd="@drawable/ic_edit"
        android:padding="10dp"/>

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:text="@string/update_profile"
        />

</RelativeLayout>